Separated Neo4j plugin from the rest