@@ -1,31 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
+<!--
+  ~ Copyright (c) 2015 GraphAware
+  ~
+  ~ This file is part of GraphAware.
+  ~
+  ~ GraphAware is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License
+  ~ as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
+  ~
+  ~ This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied
+  ~ warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
+  ~ You should have received a copy of the GNU General Public License along with this program.
+  ~ If not, see <http://www.gnu.org/licenses/>.
+  -->
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <parent>
+        <groupId>com.graphaware.neo4j</groupId>
+        <artifactId>module-parent</artifactId>
+        <version>2.2.6.35</version>
+    </parent>
+
     <groupId>com.graphaware.integration.es</groupId>
-    <artifactId>neo4j-es</artifactId>
-    <version>0.1-SNAPSHOT</version>
-    <packaging>pom</packaging>
+    <artifactId>neo4j-to-elasticsearch</artifactId>
+    <version>2.2.6.35.0-SNAPSHOT</version>
 
-    <modules>
-        <module>es-plugin</module>
-        <module>neo4j-plugin</module>
-        <module>integration-tests</module>
-    </modules>
-
-    <properties>
-        <java.version>1.7</java.version>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <neo4j.version>2.2.5</neo4j.version>
-        <elasticsearch.version>1.7.1</elasticsearch.version>
-    </properties>
-
-    <name>*** Neo4j Elasticsearch Integration Parent ***</name>
-    <description>Parent Project for GraphAware Enterprise-grade Neo4j-Elasticsearch Integration</description>
-
+    <name>GraphAware Elasticsearch Integration for Neo4j</name>
+    <description>GraphAware Framework Module for integrating Neo4j with Elasticsearch</description>
     <url>http://graphaware.com</url>
 
     <licenses>
@@ -37,9 +40,9 @@
     </licenses>
 
     <scm>
-        <connection>scm:git:git@github.com:graphaware/neo4j-es.git</connection>
-        <developerConnection>scm:git:git@github.com:graphaware/neo4j-es.git</developerConnection>
-        <url>git@github.com:graphaware/neo4j-es.git</url>
+        <connection>scm:git:git@github.com:graphaware/neo4j-to-elasticsearch.git</connection>
+        <developerConnection>scm:git:git@github.com:graphaware/neo4j-to-elasticsearch.git</developerConnection>
+        <url>git@github.com:graphaware/neo4j-to-elasticsearch.git</url>
         <tag>HEAD</tag>
     </scm>
 
@@ -62,7 +65,7 @@
     </developers>
 
     <ciManagement>
-        <url>https://travis-ci.org/graphaware/neo4j-es</url>
+        <url>https://travis-ci.org/graphaware/neo4j-to-elasticsearch</url>
         <system>Travis CI</system>
     </ciManagement>
 
@@ -70,7 +73,7 @@
 
     <issueManagement>
         <system>GitHub</system>
-        <url>https://github.com/graphaware/neo4j-es/issues</url>
+        <url>https://github.com/graphaware/neo4j-to-elasticsearch/issues</url>
     </issueManagement>
 
     <organization>
@@ -78,149 +81,106 @@
         <url>http://graphaware.com</url>
     </organization>
 
-    <dependencyManagement>
-        <dependencies>
-            <!-- ES Plugin -->
-            <dependency>
-                <groupId>org.elasticsearch</groupId>
-                <artifactId>elasticsearch</artifactId>
-                <version>${elasticsearch.version}</version>
-                <scope>provided</scope>
-            </dependency>
-            <dependency>
-                <groupId>com.sun.jersey</groupId>
-                <artifactId>jersey-client</artifactId>
-                <version>1.19</version>
-            </dependency>
-            <dependency>
-                <groupId>org.codehaus.jackson</groupId>
-                <artifactId>jackson-jaxrs</artifactId>
-                <version>1.9.13</version>
-            </dependency>
-            <dependency>
-                <groupId>com.google.guava</groupId>
-                <artifactId>guava</artifactId>
-                <version>18.0</version>
-            </dependency>
-            <dependency>
-                <groupId>org.reflections</groupId>
-                <artifactId>reflections</artifactId>
-                <version>0.9.9</version>
-            </dependency>
+    <dependencies>
 
+        <dependency>
+            <groupId>com.graphaware.neo4j</groupId>
+            <artifactId>runtime</artifactId>
+        </dependency>
 
-            <!-- Integration Tests -->
-            <dependency>
-                <groupId>com.graphaware.integration.es</groupId>
-                <artifactId>es-plugin</artifactId>
-                <version>0.1-SNAPSHOT</version>
-            </dependency>
-            <dependency>
-                <groupId>com.graphaware.integration.es</groupId>
-                <artifactId>neo4j-plugin</artifactId>
-                <version>2.2.5.35.0-SNAPSHOT</version>
-                <scope>test</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.codelibs</groupId>
-                <artifactId>elasticsearch-cluster-runner</artifactId>
-                <version>1.7.0.0</version>
-            </dependency>
-            <dependency>
-                <groupId>com.graphaware.neo4j</groupId>
-                <artifactId>recommendation-engine</artifactId>
-                <version>2.2.5.35.8</version>
-                <scope>test</scope>
-            </dependency>
-            <dependency>
-                <groupId>com.graphaware.neo4j</groupId>
-                <artifactId>uuid</artifactId>
-                <version>2.2.5.35.7</version>
-                <scope>test</scope>
-            </dependency>
-            <dependency>
-                <groupId>com.graphaware.neo4j</groupId>
-                <artifactId>tests</artifactId>
-                <version>2.2.5.35</version>
-                <scope>test</scope>
-            </dependency>
-            <dependency>
-                <groupId>com.graphaware.neo4j</groupId>
-                <artifactId>runtime</artifactId>
-                <version>2.2.5.35</version>
-                <scope>test</scope>
-            </dependency>
-            <dependency>
-                <groupId>com.graphaware.neo4j</groupId>
-                <artifactId>writer</artifactId>
-                <version>2.2.5.35</version>
-                <scope>test</scope>
-            </dependency>
-            <dependency>
-                <groupId>com.graphaware.neo4j</groupId>
-                <artifactId>writer-api</artifactId>
-                <version>2.2.5.35</version>
-                <scope>test</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.lucene</groupId>
-                <artifactId>lucene-core</artifactId>
-                <version>3.6.2</version>
-                <scope>test</scope>
-            </dependency>
-            <dependency>
-                <groupId>io.searchbox</groupId>
-                <artifactId>jest</artifactId>
-                <version>0.1.6</version>
-            </dependency>
-            <dependency>
-                <groupId>org.slf4j</groupId>
-                <artifactId>slf4j-api</artifactId>
-                <version>1.7.12</version>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
+        <dependency>
+            <groupId>com.graphaware.neo4j</groupId>
+            <artifactId>writer-api</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.graphaware.neo4j</groupId>
+            <artifactId>writer</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>io.searchbox</groupId>
+            <artifactId>jest</artifactId>
+            <version>0.1.6</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.graphaware.neo4j</groupId>
+            <artifactId>uuid</artifactId>
+            <version>2.2.6.35.7</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.graphaware.integration.es</groupId>
+            <artifactId>neo4j-es-tests</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>test</scope>
+        </dependency>
+
+    </dependencies>
 
     <build>
         <plugins>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3.2</version>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>copy-model</id>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>copy</goal>
+                        </goals>
+                        <configuration>
+                            <overWriteReleases>true</overWriteReleases>
+                            <overWriteSnapshots>false</overWriteSnapshots>
+                            <overWriteIfNewer>true</overWriteIfNewer>
+                            <artifactItems>
+                                <artifactItem>
+                                    <groupId>org.apache.lucene</groupId>
+                                    <artifactId>lucene-core</artifactId>
+                                    <version>4.10.4</version>
+                                    <overWrite>false</overWrite>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>com.graphaware.integration.es</groupId>
+                                    <artifactId>neo4j-es-tests</artifactId>
+                                    <version>1.0-SNAPSHOT</version>
+                                    <classifier>jar-with-dependencies</classifier>
+                                    <overWrite>false</overWrite>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>log4j</groupId>
+                                    <artifactId>log4j</artifactId>
+                                    <version>1.2.17</version>
+                                    <overWrite>false</overWrite>
+                                </artifactItem>
+                            </artifactItems>
+                            <outputDirectory>${project.basedir}/extlib</outputDirectory>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <artifactId>maven-clean-plugin</artifactId>
+                <version>2.6.1</version>
                 <configuration>
-                    <source>${java.version}</source>
-                    <target>${java.version}</target>
-                    <encoding>${project.build.sourceEncoding}</encoding>
+                    <filesets>
+                        <fileset>
+                            <directory>${project.basedir}/extlib</directory>
+                        </fileset>
+                    </filesets>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-deploy-plugin</artifactId>
-                <version>2.8.1</version>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.18.1</version>
                 <configuration>
-                    <retryFailedDeploymentCount>10</retryFailedDeploymentCount>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.sonatype.plugins</groupId>
-                <artifactId>nexus-staging-maven-plugin</artifactId>
-                <version>1.6.3</version>
-                <extensions>true</extensions>
-                <configuration>
-                    <serverId>ossrh</serverId>
-                    <nexusUrl>https://oss.sonatype.org/</nexusUrl>
-                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-release-plugin</artifactId>
-                <version>2.5</version>
-                <configuration>
-                    <autoVersionSubmodules>true</autoVersionSubmodules>
-                    <useReleaseProfile>false</useReleaseProfile>
-                    <releaseProfiles>release</releaseProfiles>
-                    <goals>deploy</goals>
+                    <argLine>-Xmx2048m -XX:MaxPermSize=512m</argLine>
+                    <systemPropertyVariables>
+                        <classpath>${project.basedir}/extlib</classpath>
+                    </systemPropertyVariables>
                 </configuration>
             </plugin>
         </plugins>
